# Athena

./: README.md  instruction.md  main.py  pyproject.toml  setup.ps1
src/athena/: __init__.py  main.py
src/athena/core/: config.py
src/athena/db/: session.py
src/athena/routers/: smart_qa_router.py
src/athena/schemas/: common.py  smart_qa.py
src/athena/services/: rag_service.py
src/athena/utils/: pagination.py
tests/: test_smart_qa.py
